fix(calendar): fix fullcalendar content 2px overflow

--- a/components/calendar/style/index.less
+++ b/components/calendar/style/index.less
@@ -235,7 +235,7 @@
   }
 
   &-fullscreen &-content {
-    height: 90px;
+    height: 88px;
     overflow-y: auto;
     position: static;
     width: auto;
